Car-Service-History/car-service-be/k8s/zipkin-do-not-use/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app.kubernetes.io/name: zipkin
    app.kubernetes.io/instance: zipkin
    app: zipkin
spec:
  type: ClusterIP
  ports:
    - port: 9411
      targetPort: 9411
#      protocol: TCP
#      name: http
